# lajjzy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml  unslop-freshness.yml
.superpowers/sdd/: final-fix-report.md  task-7-report.md
.unslop/: .gitignore  alignment-summary.md  config.json  principles.md
crates/lajjzy-cli/: Cargo.toml
crates/lajjzy-cli/src/: main.rs  main.spec.md
crates/lajjzy-core/: Cargo.toml
crates/lajjzy-core/src/: backend.rs  backend.spec.md  cli.rs  cli.spec.md  forge.rs  forge.spec.md  gh.rs  gh.spec.md  lib.rs  types.behaviour.yaml  types.rs  types.spec.md
crates/lajjzy-tui/: Cargo.toml
crates/lajjzy-tui/src/: action.rs  action.spec.md  app.rs  app.spec.md  dispatch.rs  effect.rs  effect.spec.md  input.impl.md  input.rs  input.spec.md  lib.rs  modal.rs  modal.spec.md  mouse.impl.md  mouse.rs  mouse.spec.md  render.rs  render.spec.md
crates/lajjzy-tui/src/dispatch/: dispatch.spec.md  mod.rs  omnibar.rs  omnibar.spec.md
crates/lajjzy-tui/src/panels/: detail.rs  detail.spec.md  graph.rs  graph.spec.md  mod.rs
crates/lajjzy-tui/src/widgets/: bookmark_input.rs  bookmark_input.spec.md  bookmark_picker.rs  bookmark_picker.spec.md  conflict_view.rs  conflict_view.spec.md  describe.rs  describe.spec.md  diff_view.rs  diff_view.spec.md  file_list.rs  file_list.spec.md  fuzzy_find.rs  graph.rs  graph.spec.md  help.rs  help.spec.md  hunk_picker.rs  hunk_picker.spec.md  mod.rs  omnibar.rs  omnibar.spec.md  op_log.rs  op_log.spec.md  status_bar.behaviour.yaml  status_bar.rs  status_bar.spec.md
docs/superpowers/: spike-jj-lib-findings.md  spike-jj-lib-write-findings.md
docs/superpowers/plans/: 2026-03-20-m0-skeleton.md  2026-03-20-m1a-detail-pane.md  2026-03-20-m1b-overlays.md  2026-03-21-m2-elm-style-mutations.md  2026-03-21-m3a-omnibar.md  2026-03-21-m3b-rebase.md  2026-03-21-m3c-split-squash.md  2026-03-22-m3d-revset-autocomplete.md  2026-03-22-m6-forge-integration.md  2026-06-20-invariant-guardrails.md  2026-06-20-python-textual-mvp.md  2026-06-22-phase-1a-core-seams-facade.md  2026-06-22-phase-1b-app-bindings-stub-widgets.md  2026-06-24-phase-2a-detailstate-diff-mvu.md
docs/superpowers/specs/: 2026-03-20-m0-skeleton-design.md  2026-03-20-m1a-detail-pane-design.md  2026-03-20-m1b-overlays-design.md  2026-03-21-m2-elm-style-mutations-design.md  2026-03-21-m3a-omnibar-design.md  2026-03-21-m3b-rebase-design.md  2026-03-21-m3c-split-squash-design.md  2026-03-22-m3d-revset-autocomplete-design.md  2026-03-22-m6-forge-integration-design.md  2026-06-20-invariant-guardrails-design.md  2026-06-20-python-textual-reboot-design.md  2026-06-22-daily-driver-essentials-design.md  2026-06-24-phase2-exemplary-mvu-design.md
src/lajjzy/: __init__.py  __main__.py  app.py  invariants.py  styles.tcss
src/lajjzy/backend/: __init__.py  jj.py  parse.py  types.py
src/lajjzy/core/: __init__.py  commands.py  messages.py  model.py  update.py
src/lajjzy/runtime/: __init__.py  backend.py
src/lajjzy/widgets/: __init__.py  bookmark_input.py  bookmark_picker.py  conflict_view.py  detail.py  graph.py  hunk_picker.py  omnibar.py  op_log.py  status_bar.py
tests/: conftest.py  test_app.py  test_architecture.py  test_invariants.py  test_properties.py  test_smoke.py
tests/backend/: test_jj.py  test_jj_facade_ext.py  test_jj_unit.py  test_parse.py  test_parse_ext.py  test_types.py
tests/core/: test_update.py
tests/runtime/: test_runtime.py
tests/widgets/: test_stub_widgets.py
