[workspace]
resolver = "2"
members = [
    "crates/lajjzy-core",
    "crates/lajjzy-tui",
    "crates/lajjzy-cli",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Too noisy for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
