[workspace]
resolver = "2"
members = [
    "crates/lajjzy-core",
    "crates/lajjzy-tui",
    "crates/lajjzy-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Lewdwig-V/lajjzy"
description = "A keyboard-driven, lazygit-style TUI for Jujutsu (jj)"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Too noisy for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
