[project]
name = "lajjzy"
version = "0.1.0"
description = "A keyboard-driven, lazygit-style TUI for Jujutsu (jj)."
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
dependencies = ["textual>=6.0"]

[project.scripts]
lajjzy = "lajjzy.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lajjzy"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
