[package]
name = "lajjzy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core backend for lajjzy — jj repo access layer"
publish = false

[dependencies]
anyhow = "1"
jj-lib = { version = "0.39.0", features = ["git"] }
pollster = "0.4.0"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
