[package]
name = "lajjzy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core backend for lajjzy — jj repo access layer"

[dependencies]
anyhow = "1"
dirs = "6.0.0"
jj-lib = { version = "0.39.0", features = ["git"] }
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
