[package]
name = "lajjzy-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI widgets and state machine for lajjzy"

[dependencies]
lajjzy-core = { path = "../lajjzy-core", version = "0.1.0" }
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
nucleo-matcher = "0.3"
tui-textarea = "0.7.0"

[lints]
workspace = true
